[gd_scene load_steps=4 format=3 uid="uid://bfwgwwfsgi7ko"]

[ext_resource type="Script" uid="uid://i07i6wyx8d1u" path="res://scripts/words_input_panel.gd" id="1"]
[ext_resource type="Script" uid="uid://dl17v85meayna" path="res://scripts/words_input_panel_panel.gd" id="2"]
[ext_resource type="Theme" uid="uid://c8otso07yd5di" path="res://Image/UI/BloodButtonCompleted.tres" id="3"]

[node name="WordsInputPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="WordsInputPanelPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -130.5
offset_right = 230.0
offset_bottom = 130.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="VBoxContainer" type="VBoxContainer" parent="WordsInputPanelPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InputBox" type="TextEdit" parent="WordsInputPanelPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 3
wrap_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="WordsInputPanelPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="CancelButton" type="Button" parent="WordsInputPanelPanel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("3")
text = "Cancel"

[node name="SendButton" type="Button" parent="WordsInputPanelPanel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("3")
text = "Send"
